revamped react ui with a few bug fixes, few more left
